send otp route
