# src/api/routers/auth.go
@@ -10,10 +10,12 @@ import (
 func Auth(r *gin.RouterGroup) {
 	cfg := config.GetConfig()
 	handler := handlers.AuthMobile{}
+	handler2 := handlers.AuthRegister{}
+	handler3 := handlers.UserHandler{}
 	tokenHandler := handlers.TokenHandler{}
 	r.POST("/register-login-mobile", handler.RLMobile)
 	r.POST("/claim",middlewares.Authentication(cfg), tokenHandler.GetClaims)
-	// r.POST("/register", handler.Register)
-	// r.POST("/logout", handler.Logout)
+	r.POST("/register", handler2.Register)
+	r.POST("/send-otp", handler3.SendOtp)
 	// r.POST("/refresh", handler.Refresh)
 }
